--- a/app/gem-farm/package.json
+++ b/app/gem-farm/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "yarn serve",
-    "build": "yarn run build",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service run build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
