--- a/app/gem-farm/package.json
+++ b/app/gem-farm/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service run build",
+    "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
@@ -22,6 +22,7 @@
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
+    "serve": "^13.0.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
